# deepgram-python-stt-comparisons

./: .gitignore  README.md  app.py  pyproject.toml  sample.env
providers/: __init__.py  base.py  deepgram_provider.py  microsoft_provider.py  providers.py
static/: script.js  style.css
static/config/providers/: deepgram.json  microsoft.json
templates/: index.html
